--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ <br />🥉 22/5/2014
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 15/7/2004
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
-            🥈 23/10/2009
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 26/2/2013
+            🥇 24/7/2002
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
+            🥈 15/7/2004
+            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 3/8/2012
             - 20/2/2023
             ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
-            🥈 3/8/2012
-            - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />🥉 17/7/2012
+            🥈 17/7/2012
+            - 14/3/2022
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 17/7/2012
             - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            13/11/2023, 6:30:01 μ.μ.
+            13/11/2023, 6:45:01 μ.μ.
           </p>
         </section>
       </main>
