--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
             - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 3/8/2012
-            - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
-            🥈 3/8/2012
-            - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />🥉 3/8/2012
-            - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
+            🥇 17/7/2012
+            - 14/3/2022
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            🥈 26/11/2018
+            - 1/12/2027
+            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />🥉 21/6/2017
+            - 27/5/2026
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            13/11/2023, 8:30:01 μ.μ.
+            13/11/2023, 8:45:02 μ.μ.
           </p>
         </section>
       </main>
