--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 1709 <br />📁<em> Υποθέσεις:</em>
-            23317 <br />
+            23319 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -223,11 +223,11 @@
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             🥈 26/11/2018
             - 1/12/2027
-            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />🥉 21/6/2017
-            - 27/5/2026
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />🥉 3/4/2014
+            - 8/3/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            13/11/2023, 9:00:01 μ.μ.
+            13/11/2023, 9:15:02 μ.μ.
           </p>
         </section>
       </main>
