--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 1709 <br />📁<em> Υποθέσεις:</em>
-            23319 <br />
+            23320 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -214,20 +214,20 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 24/7/2002
             - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
-            🥈 15/7/2004
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
+            🥈 23/10/2009
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 1/11/2010
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 17/7/2012
-            - 14/3/2022
+            🥇 26/2/2013
+            - 17/2/2023
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 26/11/2018
-            - 1/12/2027
-            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />🥉 3/4/2014
+            🥈 17/7/2012
+            - 14/3/2022
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 3/4/2014
             - 8/3/2023
             ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            13/11/2023, 9:15:02 μ.μ.
+            13/11/2023, 9:30:01 μ.μ.
           </p>
         </section>
       </main>
