--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 10/7/2012
             - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 17/7/2012
+            🥇 3/8/2012
+            - 20/2/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
+            🥈 17/7/2012
             - 14/3/2022
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 3/4/2014
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 3/4/2014
             - 8/3/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 11/3/2013
-            - 10/2/2022
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            15/11/2023, 5:30:01 μ.μ.
+            15/11/2023, 5:45:02 μ.μ.
           </p>
         </section>
       </main>
