--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <h1 class="card__title">MySolonBot</h1>
           <h2 class="card__subtitle">Statistics</h2>
           <p>
-            🤷🏻<em> Χρήστες:</em> 1743 <br />📁<em> Υποθέσεις:</em>
+            🤷🏻<em> Χρήστες:</em> 1744 <br />📁<em> Υποθέσεις:</em>
             24022 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
@@ -214,8 +214,8 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 24/7/2002
             - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
-            🥈 23/10/2009
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 1/11/2010
+            🥈 15/7/2004
+            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 3/8/2012
@@ -227,7 +227,7 @@
             - 20/2/2023
             ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            21/11/2023, 7:15:01 μ.μ.
+            21/11/2023, 7:30:01 μ.μ.
           </p>
         </section>
       </main>
