--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
             🥇 24/7/2002
             - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
             🥈 9/5/2003
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 15/7/2004
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 23/10/2009
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 15/7/2004
             - 7/12/2022
@@ -227,7 +227,7 @@
             - 27/2/2029
             ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            24/11/2023, 5:45:02 μ.μ.
+            24/11/2023, 6:00:02 μ.μ.
           </p>
         </section>
       </main>
