--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 1755 <br />📁<em> Υποθέσεις:</em>
-            24250 <br />
+            24251 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -214,20 +214,20 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 24/7/2002
             - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
-            🥈 9/5/2003
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 23/10/2009
+            🥈 23/10/2009
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 1/11/2010
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 15/7/2004
-            - 7/12/2022
-            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
-            🥈 1/10/2014
-            - 3/2/2026
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 27/3/2018
-            - 27/2/2029
-            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
+            🥇 3/8/2012
+            - 20/2/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
+            🥈 3/8/2012
+            - 20/2/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />🥉 3/8/2012
+            - 20/2/2023
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            24/11/2023, 7:30:01 μ.μ.
+            24/11/2023, 7:45:02 μ.μ.
           </p>
         </section>
       </main>
