--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ <br />🥉 22/5/2014
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
-            🥇 23/10/2009
+            🥇 9/5/2003
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 1/11/2010
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 10/7/2012
-            - ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br /><br />
+            🥈 15/7/2004
+            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 3/8/2012
+            🥇 15/7/2004
+            - 7/12/2022
+            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
+            🥈 3/8/2012
             - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
-            🥈 17/7/2012
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />🥉 17/7/2012
             - 14/3/2022
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 3/4/2014
-            - 8/3/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            5/12/2023, 12:00:01 π.μ.
+            5/12/2023, 12:15:01 π.μ.
           </p>
         </section>
       </main>
